# turbo

./: .prettierignore  Cargo.toml  package.json  pnpm-lock.yaml  turbo.json
.cargo/: config.toml
.github/: CODEOWNERS
.github/actions/cargo-sweep/: package.json
.github/actions/next-integration-stat/: package.json
.github/actions/turbopack-bump/: package.json
.github/workflows/: test.yml  turborepo-release-step-2.yml
benchmark/: package.json
cli/: Makefile  package.json  turbo.json
cli/integration_tests/: setup_git.sh
cli/integration_tests/basic_monorepo/: run_summary.t
cli/internal/client/: client.go
cli/internal/ffi/: bindings.h  ffi.go
cli/internal/fs/: get_turbo_data_dir_go.go
cli/internal/hashing/: package_deps_hash.go
cli/internal/packagemanager/: packagemanager.go
cli/internal/run/: global_hash.go  real_run.go
cli/internal/runcache/: runcache.go
cli/internal/runsummary/: run_summary.go
crates/globwalk/: Cargo.toml
crates/globwalk/src/: lib.rs
crates/next-dev-tests/test-harness/: package.json
crates/next-dev-tests/tests/: package.json
crates/turbo-binding/: Cargo.toml
crates/turbo-binding/src/: lib.rs
crates/turbo-tasks-bytes/src/: lib.rs
crates/turbo-tasks-env/src/: custom.rs  dotenv.rs  filter.rs  lib.rs
crates/turbo-tasks-fs/examples/: hash_directory.rs  (+1 more)
crates/turborepo-ffi/: Cargo.toml
crates/turborepo-lib/: Cargo.toml
crates/vc-test/: Cargo.toml
docs/: package.json
examples/non-monorepo/: package.json
examples/with-npm/: package-lock.json
examples_tests/: setup.sh
scripts/: run-example.sh
(+81 files in other folders)
