[package]
name = "globwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob-match = "0.2.1"
turborepo-paths = { version = "0.1.0", path = "../turborepo-paths" }
walkdir = "2.3.3"

[dev-dependencies]
test-case = "3.1.0"
