[package]
name = "vc-test"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

[[bin]]
name = "vc-test"
path = "src/main.rs"
bench = false

[lib]
bench = false

[dependencies]
anyhow = { workspace = true }

turbo-tasks = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
